# TweetinSights

./: README.md
client/: .eslintrc.json  eslintrc.js  package-lock.json  package.json
client/public/: manifest.json
client/src/: App.js  App.test.tsx  App.tsx
client/src/api/: index.jsx
client/src/components/: AIResponse.tsx  Navbar.tsx  Navigation.jsx  Navigation.tsx  Searchbar.jsx  Searchbar.tsx  Tweet.jsx  Tweet.tsx  TweetStats.tsx
client/src/styles/: defaultTheme.ts
client/src/types/: index.ts
server/: main.py  manage.py  nohup.out  pyproject.toml  requirements.txt  run.py
server/api_v1/: __init__.py
server/core/: config.py  crud.py  db.py  models.py
server/migrations/: script.py.mako
server/migrations/versions/: 98d688b6e935_.py
server/models/: Tweet.py
server/src/: app.py  config.py  main.py  manage.py
server/src/models/: Tweet.py
